fix upcoming deprecations